--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Is project ka uddeshya logon ko air pollution ke prati jagruk banana hai.
 
 <!-- FOOTER -->
 <div class="footer" data-aos="zoom-in">
-<p><b>Student Name:</b> Aman</p>
+<p><b>Student Name:</b> Ansh</p>
 <p><b>Class:</b> 9th-G | SBV Tughlakabad Village</p>
 <p>Mission: Clean Air 🌱 Green India 🇮🇳</p>
 </div>
